--- a/app/code/Mageplaza/Seo/view/frontend/templates/richsnippets/jsonld/organization.phtml
+++ b/app/code/Mageplaza/Seo/view/frontend/templates/richsnippets/jsonld/organization.phtml
@@ -1,23 +1,24 @@
 <!-- Customizing Knowledge Graph by Mageplaza SEO-->
-
 <!--Social Profiles, Business information -->
+<?php if($block->getRichsnippetsHelper('custom') && $block->getRichsnippetsHelper('enable') ): ?>
 <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
   "@type" : "Organization",
-  "name" : "<?php echo $this->getBusinessName();?>",
-  "url" : "<?php echo $this->getBaseUrl();?>",
-  "logo": "<?php echo $this->getLogo();?>"
-  <?php if($this->getProfiles()): ?>
+  "name" : "<?php echo $block->getBusinessName();?>",
+  "url" : "<?php echo $block->getBaseUrl();?>",
+  "logo": "<?php echo $block->getLogo();?>"
+  <?php if($block->getProfiles()): ?>
   "sameAs" : [
-    <?php echo $this->getProfiles();?>
+    <?php echo $block->getProfiles();?>
   ],
   <?php endif;?>
   "contactPoint" : [{
     "@type" : "ContactPoint",
-    "telephone" : "<?php echo $this->getBusinessPhone();?>",
+    "telephone" : "<?php echo $block->getBusinessPhone();?>",
     "contactType" : "General contact"
   }]
 }
 </script>
 
+<?php endif; ?>
