--- a/app/code/Mageplaza/Seo/view/frontend/templates/sitelinks.phtml
+++ b/app/code/Mageplaza/Seo/view/frontend/templates/sitelinks.phtml
@@ -1,16 +1,18 @@
-aaaaaaaaaaaaaaaa
-<!--<script type="application/ld+json">-->
-<!--{-->
-<!--  "@context": "http://schema.org",-->
-<!--  "@type": "WebSite",-->
-<!--  "url": "--><?php //echo Mage::getBaseUrl(true) ?><!--",-->
-<!--  "potentialAction": {-->
-<!--    "@type": "SearchAction",-->
-<!--    "target": "--><?php //echo Mage::getBaseUrl(true) ?><!--catalogsearch/result/q={search_term_string}",-->
-<!--    --><?php //if($this->getSitelinksApp()):?>
-<!--	"target": "android-app://--><?php //echo $this->getSitelinksAppCode();?><!--/--><?php //echo $this->getSiteLinkDomainForApp();?><!--catalogsearch/result/?q={search_term}"-->
-<!--    --><?php //endif;?>
-<!--    "query-input": "required name=search_term_string"-->
-<!--  }-->
-<!--}-->
-<!--</script>-->
+<?php if($block->getGeneralConfig('sitelinks')): ?>
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "WebSite",
+  "url": "<?php echo $block->getBaseUrl() ?>",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "<?php echo $block->getBaseUrl() ?>catalogsearch/result/q={search_term_string}",
+    <?php if($block->getSitelinksApp()):?>
+	"target": "android-app://<?php echo $block->getSitelinksAppCode();?>/<?php echo $block->getSiteLinkDomainForApp();?>catalogsearch/result/?q={search_term}"
+    <?php endif;?>
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+<?php endif; ?>
