--- a/app/code/Mageplaza/Seo/view/frontend/layout/catalog_category_view.xml
+++ b/app/code/Mageplaza/Seo/view/frontend/layout/catalog_category_view.xml
@@ -3,8 +3,8 @@
 	  xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
 		<head>
-			<block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_opengraph"
-				   template="Mageplaza_Seo::page/head/opengraph/cms.phtml">
+			<block class="Mageplaza\Seo\Block\Page\Head\Product" name="mageplaza_seo_opengraph"
+				   template="Mageplaza_Seo::page/head/opengraph/product.phtml">
 			</block>
 		</head>
 	</body>
