add catalog, cms

--- a/app/code/Mageplaza/Seo/view/frontend/templates/page/head/opengraph/category.phtml
+++ b/app/code/Mageplaza/Seo/view/frontend/templates/page/head/opengraph/category.phtml
@@ -1,17 +1,17 @@
 <!--Open Graph Protocol for Facebook by Mageplaza SEO-->
-<?php if ($category = Mage::registry('current_category')): ?>
+<?php if ($category = $block->getCurrentCategory()): ?>
 	<meta property="og:title" content="<?php echo $category->getName() ?>"/>
 	<meta property="og:type" content="product.group"/>
-	<meta property="og:url" content="<?php echo $this->helper('core/url')->getCurrentUrl(); ?>"/>
+	<meta property="og:url" content="<?php echo $block->getCurrentUrl(); ?>"/>
 	<?php if ($category->getShortDescription()): ?>
 		<meta property="og:description" content="<?php echo trim(strip_tags($category->getDescription())) ?>"/>
 	<?php endif; ?>
 	
-	<meta property="og:site_name" content="<?php echo $this->getBusinessName();?>"/>
+	<meta property="og:site_name" content="<?php echo $block->getBusinessName();?>"/>
 
 	<!--	Twitter Card By Mageplaza SEO-->
 	<meta name="twitter:card" content="summary"/>
-	<meta name="twitter:site" content="<?php echo $this->getTwitterAccount(); ?>"/>
+	<meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
 	<meta name="twitter:title" content="<?php echo $category->getName() ?>"/>
 	<?php if ($category->getShortDescription()): ?>
 		<meta name="twitter:description" content="<?php echo trim(strip_tags($category->getDescription())); ?>"/>
