--- a/app/code/Mageplaza/Seo/view/frontend/templates/richsnippets/jsonld/product.phtml
+++ b/app/code/Mageplaza/Seo/view/frontend/templates/richsnippets/jsonld/product.phtml
@@ -3,15 +3,15 @@
  * Learn more: https://developers.google.com/structured-data/rich-snippets/products#single_product_page
  */
 ?>
-<?php if(Mage::registry('current_product')): ?>
-<?php $product = Mage::registry('current_product'); ?>
+<?php if($block->getProduct()): ?>
+<?php $product = $block->getProduct(); ?>
 <!--    Product Rich Snippets by Mageplaza SEO-->
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
   "@type": "Product",
   "name": "<?php echo $product->getName();?>",
-  "image": "<?php echo $this->helper('catalog/image')->init($product, 'small_image')->resize(200,200);?>",
+<!--  "image": "--><?php //echo $this->helper('catalog/image')->init($product, 'small_image')->resize(200,200);?><!--",-->
   "description": "<?php echo trim(strip_tags($product->getShortDescription())); ?>",
   <?php if($product->getMpn()):?>
   "mpn": "<?php echo $product->getMpn();?>",
@@ -26,7 +26,7 @@
   },
  */?>
 
- <?php if($this->getReviewCount()):?>
+ <?php if($block->getReviewCount()):?>
   "aggregateRating": {
     "@type": "AggregateRating",
     "ratingValue": "<?php echo $this->getRatingSummary();?>",
@@ -37,7 +37,7 @@
   <?php if($product->getSpecialPrice() AND $product->getPrice() != $product->getSpecialPrice()):?>
   "offers": {
     "@type": "Offer",
-    "priceCurrency": "<?php echo $this->getCurrency();?>",
+    "priceCurrency": "<?php echo $block->getCurrency();?>",
     "price": "<?php echo $product->getSpecialPrice();?>",
     "priceValidUntil": "<?php echo $product->getSpecialToDate();?>",
     "availability": "http://schema.org/InStock",
