add config for footer sitemap

--- a/app/code/Mageplaza/Seo/view/frontend/layout/default.xml
+++ b/app/code/Mageplaza/Seo/view/frontend/layout/default.xml
@@ -27,10 +27,10 @@
 		</referenceBlock>
 
 		<referenceBlock name="footer_links">
-			<block class="Magento\Framework\View\Element\Html\Link\Current" name="mageplaza_seo_sitemap_footer">
+			<block class="Magento\Framework\View\Element\Html\Link\Current" name="mageplaza_seo_sitemap_footer" ifconfig="seo/htmlsitemap/footer" >
 				<arguments>
 					<argument name="label" xsi:type="string" translate="true">SEO SITEMAP</argument>
-					<argument name="path" xsi:type="string">seo/sitemap</argument>
+					<argument name="path" xsi:type="string">seo/sitemap/view</argument>
 				</arguments>
 			</block>
 		</referenceBlock>
