--- a/app/code/Mageplaza/Seo/view/frontend/layout/catalogsearch_advanced_result.xml
+++ b/app/code/Mageplaza/Seo/view/frontend/layout/catalogsearch_advanced_result.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	  xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-	<head>
-		<meta name="robots" content="NOINDEX,FOLLOW"/>
-	</head>
+	<referenceBlock name="head.additional">
+		<block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_search_result" ifconfig="seo/general/nofollow_sr"
+			   template="Mageplaza_Seo::search/result.phtml">
+		</block>
+	</referenceBlock>
 </page>
