--- a/app/code/Mageplaza/Seo/view/frontend/layout/seo_sitemap_view.xml
+++ b/app/code/Mageplaza/Seo/view/frontend/layout/seo_sitemap_view.xml
@@ -3,5 +3,14 @@
 		<block class="Mageplaza\Seo\Block\Sitemap" name="mageplaza_seo_sitemap"
 			   template="Mageplaza_Seo::sitemap/html.phtml">
 		</block>
+
+		<block class="Mageplaza\Seo\Block\Sitemap" name="mageplaza_seo_sitemap_category"
+			   template="Mageplaza_Seo::sitemap/category.phtml">
+		</block>
+
+		<block class="Mageplaza\Seo\Block\Sitemap" name="mageplaza_seo_sitemap_product"
+			   template="Mageplaza_Seo::sitemap/product.phtml">
+		</block>
+
 	</referenceBlock>
 </page>
