--- a/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
@@ -31,28 +31,29 @@
  */
 ?>
 
-<?php if($crumbs && is_array($crumbs)): ?>
+<?php if ($crumbs && is_array($crumbs)) : ?>
 	<div class="breadcrumbs">
-		<ul>
-			<?php foreach($crumbs as $_crumbName=>$_crumbInfo): ?>
-				<li class="<?php echo $_crumbName ?>">
-					<?php if($_crumbInfo['link']): ?>
-						<a href="<?php echo $_crumbInfo['link'] ?>" title="<?php echo $this->escapeHtml($_crumbInfo['title']) ?>"><?php echo $this->escapeHtml($_crumbInfo['label']) ?></a>
-					<?php elseif($_crumbInfo['last']): ?>
-						<strong><?php echo $this->escapeHtml($_crumbInfo['label']) ?></strong>
-					<?php else: ?>
-						<?php echo $this->escapeHtml($_crumbInfo['label']) ?>
-					<?php endif; ?>
-					<?php if(!$_crumbInfo['last']): ?>
-						<span>/ </span>
-					<?php endif; ?>
-				</li>
-			<?php endforeach; ?>
-		</ul>
-	</div>
+    <ul class="items">
+        <?php foreach ($crumbs as $crumbName => $crumbInfo) : ?>
+			<li class="item <?php /* @escapeNotVerified */ echo $crumbName ?>">
+            <?php if ($crumbInfo['link']) : ?>
+				<a href="<?php /* @escapeNotVerified */ echo $crumbInfo['link'] ?>" title="<?php echo $block->escapeHtml($crumbInfo['title']) ?>">
+                    <?php echo $block->escapeHtml($crumbInfo['label']) ?>
+                </a>
+			<?php elseif ($crumbInfo['last']) : ?>
+				<strong><?php echo $block->escapeHtml($crumbInfo['label']) ?></strong>
+			<?php else: ?>
+				<?php echo $block->escapeHtml($crumbInfo['label']) ?>
+			<?php endif; ?>
+            </li>
+		<?php endforeach; ?>
+    </ul>
+</div>
 <?php endif; ?>
 
-	<!--Breadcrumbs Data by Mageplaza SEO-->
+
+
+<!--Breadcrumbs Data by Mageplaza SEO-->
 <?php if($crumbs):?>
 	<script type="application/ld+json">
 {
