--- a/view/frontend/layout/cms_index_index.xml
+++ b/view/frontend/layout/cms_index_index.xml
@@ -2,7 +2,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <referenceBlock name="head.additional">
-        <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_opengraph" ifconfig="seo/general/opengraph"
+        <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_opengraph"
+               ifconfig="seo/general/opengraph"
                template="Mageplaza_Seo::page/head/opengraph/homepage.phtml">
         </block>
     </referenceBlock>
