--- a/view/frontend/templates/page/head/opengraph/cms.phtml
+++ b/view/frontend/templates/page/head/opengraph/cms.phtml
@@ -1,16 +1,20 @@
 <!--Open Graph Protocol for Facebook by Mageplaza SEO-->
 <?php $cms = $block->getRegistry('cms_page'); ?>
 <?php if ($cms): ?>
-	<meta property="og:title" content="<?php echo $cms->getTitle() ?>"/>
-	<meta property="og:type" content="article"/>
-	<meta property="og:url" content="<?php echo $block->getCurrentUrl(); ?>"/>
-	<?php if ($cms->getMetaDescription()) ?><meta property="og:description" content="<?php echo strip_tags($cms->getMetaDescription()) ?>"/>
-	<meta property="og:site_name" content="<?php echo $block->getBusinessName();?>"/>
+    <meta property="og:title" content="<?php echo $cms->getTitle() ?>"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:url" content="<?php echo $block->getCurrentUrl(); ?>"/>
+    <?php if ($cms->getMetaDescription()) ?><meta property="og:description" content="<?php echo strip_tags(
+        $cms->getMetaDescription()
+    ) ?>"/>
+    <meta property="og:site_name" content="<?php echo $block->getBusinessName(); ?>"/>
 
-	<!--	Twitter Card By Mageplaza SEO-->
-	<meta name="twitter:card" content="summary"/>
-	<meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
-	<meta name="twitter:title" content="<?php echo $cms->getTitle() ?>"/>
-	<?php if ($cms->getMetaDescription()) ?><meta name="twitter:description" content="<?php echo trim(strip_tags($cms->getMetaDescription())); ?>"/>
+    <!--	Twitter Card By Mageplaza SEO-->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
+    <meta name="twitter:title" content="<?php echo $cms->getTitle() ?>"/>
+    <?php if ($cms->getMetaDescription()) ?><meta name="twitter:description" content="<?php echo trim(
+        strip_tags($cms->getMetaDescription())
+    ); ?>"/>
 <?php endif; ?>
 
