--- a/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
@@ -32,48 +32,52 @@
 ?>
 
 <?php if ($crumbs && is_array($crumbs)) : ?>
-	<div class="breadcrumbs">
-    <ul class="items">
-        <?php foreach ($crumbs as $crumbName => $crumbInfo) : ?>
-			<li class="item <?php /* @escapeNotVerified */ echo $crumbName ?>">
-            <?php if ($crumbInfo['link']) : ?>
-				<a href="<?php /* @escapeNotVerified */ echo $crumbInfo['link'] ?>" title="<?php echo $block->escapeHtml($crumbInfo['title']) ?>">
-                    <?php echo $block->escapeHtml($crumbInfo['label']) ?>
-                </a>
-			<?php elseif ($crumbInfo['last']) : ?>
-				<strong><?php echo $block->escapeHtml($crumbInfo['label']) ?></strong>
-			<?php else: ?>
-				<?php echo $block->escapeHtml($crumbInfo['label']) ?>
-			<?php endif; ?>
-            </li>
-		<?php endforeach; ?>
-    </ul>
-</div>
+    <div class="breadcrumbs">
+        <ul class="items">
+            <?php foreach ($crumbs as $crumbName => $crumbInfo) : ?>
+                <li class="item <?php /* @escapeNotVerified */
+                echo $crumbName ?>">
+                    <?php if ($crumbInfo['link']) : ?>
+                        <a href="<?php /* @escapeNotVerified */
+                        echo $crumbInfo['link'] ?>" title="<?php echo $block->escapeHtml($crumbInfo['title']) ?>">
+                            <?php echo $block->escapeHtml($crumbInfo['label']) ?>
+                        </a>
+                    <?php elseif ($crumbInfo['last']) : ?>
+                        <strong><?php echo $block->escapeHtml($crumbInfo['label']) ?></strong>
+                    <?php else: ?>
+                        <?php echo $block->escapeHtml($crumbInfo['label']) ?>
+                    <?php endif; ?>
+                </li>
+            <?php endforeach; ?>
+        </ul>
+    </div>
 <?php endif; ?>
 
 
-
-<!--Breadcrumbs Data by Mageplaza SEO-->
-<?php if($crumbs):?>
-	<script type="application/ld+json">
+    <!--Breadcrumbs Data by Mageplaza SEO-->
+<?php if ($crumbs): ?>
+    <script type="application/ld+json">
 {
   "@context": "http://schema.org",
   "@type": "BreadcrumbList",
   "itemListElement": [{
   <?php $i = 0; ?>
-    <?php foreach($crumbs as $_crumbName=>$_crumbInfo): ?>
-			<?php $i++;?>
+    <?php foreach ($crumbs as $_crumbName => $_crumbInfo): ?>
+            <?php $i++; ?>
 
     "@type": "ListItem",
-    "position": <?php echo $i;?>,
+    "position": <?php echo $i; ?>,
     "item": {
       "@id": "<?php echo $_crumbInfo['link']; ?>",
       "name": "<?php echo $_crumbInfo['label']; ?>"
     }
-    <?php if(!$_crumbInfo['last']) echo ',';?>
-    <?php endforeach; ?>
+    <?php if ( ! $_crumbInfo['last']) {
+                echo ',';
+            } ?>
+        <?php endforeach; ?>
   }]
 
 }
-</script>
-<?php endif;?>
+
+    </script>
+<?php endif; ?>
