--- a/view/frontend/templates/sitemap/category.phtml
+++ b/view/frontend/templates/sitemap/category.phtml
@@ -1,12 +1,10 @@
-<div class="row">
-    <h2><?php echo __('Categories'); ?></h2>
+<h2><?php echo __('Categories'); ?></h2>
 
-    <?php $categories = $this->getCategoryCollection(); ?>
-    <?php if ($categories): ?>
-        <ul>
-            <?php foreach ($categories as $_category): ?>
-                <li><a href="<?php echo $_category->getCategoryUrl() ?>"><?php echo $_category->getName(); ?></a></li>
-            <?php endforeach; ?>
-        </ul>
-    <?php endif; ?>
-</div>
+<?php $categories = $this->getCategoryCollection(); ?>
+<?php if ($categories): ?>
+    <ul class="mp-sitemap-listing">
+        <?php foreach ($categories as $_category): ?>
+            <li><a href="<?php echo $block->getCategoryUrl($_category) ?>"><?php echo $_category->getName(); ?></a></li>
+        <?php endforeach; ?>
+    </ul>
+<?php endif; ?>
