--- a/view/frontend/templates/richsnippets/jsonld/breadcrumb_default.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/breadcrumb_default.phtml
@@ -28,8 +28,31 @@
 /**
  * Learn more https://developers.google.com/structured-data/breadcrumbs#examples
  * base template: app/design/frontend/base/default/template/page/html/breadcrumbs.phtml
+ * Test template is tested on Luma theme
  */
 ?>
+
+<?php if ($crumbs && is_array($crumbs)) : ?>
+    <div class="breadcrumbs">
+        <ul class="items">
+            <?php foreach ($crumbs as $crumbName => $crumbInfo) : ?>
+                <li class="item <?php /* @escapeNotVerified */
+                echo $crumbName ?>">
+                    <?php if ($crumbInfo['link']) : ?>
+                        <a href="<?php /* @escapeNotVerified */
+                        echo $crumbInfo['link'] ?>" title="<?php echo $block->escapeHtml($crumbInfo['title']) ?>">
+                            <?php echo $block->escapeHtml($crumbInfo['label']) ?>
+                        </a>
+                    <?php elseif ($crumbInfo['last']) : ?>
+                        <strong><?php echo $block->escapeHtml($crumbInfo['label']) ?></strong>
+                    <?php else: ?>
+                        <?php echo $block->escapeHtml($crumbInfo['label']) ?>
+                    <?php endif; ?>
+                </li>
+            <?php endforeach; ?>
+        </ul>
+    </div>
+<?php endif; ?>
 
 
     <!--Breadcrumbs Data by Mageplaza SEO-->
