--- a/view/frontend/layout/catalog_category_view_type_default.xml
+++ b/view/frontend/layout/catalog_category_view_type_default.xml
@@ -3,7 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <block class="Mageplaza\Seo\Block\Page\Head\Product" name="mageplaza_seo_opengraph"
-               template="Mageplaza_Seo::page/head/opengraph/category.phtml">
+               template="Mageplaza_Seo::opengraph/category.phtml">
         </block>
     </head>
 </page>
