--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -3,8 +3,8 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <head>
-            <block class="Mageplaza\Seo\Block\Page\Head\Product" name="mageplaza_seo_opengraph"
-                   template="Mageplaza_Seo::opengraph/product.phtml">
+            <block class="Mageplaza\Seo\Block\Page\Head\Category" name="mageplaza_seo_opengraph"
+                   template="Mageplaza_Seo::opengraph/category.phtml">
             </block>
 
             <block class="Mageplaza\Seo\Block\Navigation\Category" name="mageplaza_seo_next_prev"
