Optimize Configuration Open Graph, Twitter card improvement

--- a/view/frontend/layout/cms_page_view.xml
+++ b/view/frontend/layout/cms_page_view.xml
@@ -2,8 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <referenceBlock name="head.additional">
-        <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_opengraph"
-               ifconfig="seo/general/opengraph"
+        <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_open_graph"
                template="Mageplaza_Seo::opengraph/cms.phtml">
         </block>
     </referenceBlock>
