--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -3,7 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <head>
-            <block class="Mageplaza\Seo\Block\Page\Head\Category" name="mageplaza_seo_opengraph"
+            <block class="Mageplaza\Seo\Block\Page\Head\Category" name="mageplaza_seo_open_graph"
                    template="Mageplaza_Seo::opengraph/category.phtml">
             </block>
 
