--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <block class="Mageplaza\Seo\Block\Page\Head\Product" name="mageplaza_seo_opengraph"
+        <block class="Mageplaza\Seo\Block\Page\Head\Product" name="mageplaza_seo_open_graph"
                template="Mageplaza_Seo::opengraph/product.phtml">
         </block>
     </head>
