--- a/view/frontend/templates/opengraph/cms.phtml
+++ b/view/frontend/templates/opengraph/cms.phtml
@@ -1,20 +1,34 @@
-<!--Open Graph Protocol for Facebook by Mageplaza SEO-->
 <?php $cms = $block->getRegistry('cms_page'); ?>
 <?php if ($cms): ?>
-    <meta property="og:title" content="<?php echo $cms->getTitle() ?>"/>
-    <meta property="og:type" content="article"/>
-    <meta property="og:url" content="<?php echo $block->getCurrentUrl(); ?>"/>
-    <?php if ($cms->getMetaDescription()) ?><meta property="og:description" content="<?php echo strip_tags(
-        $cms->getMetaDescription()
-    ) ?>"/>
-    <meta property="og:site_name" content="<?php echo $block->getBusinessName(); ?>"/>
 
-    <!--	Twitter Card By Mageplaza SEO-->
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
-    <meta name="twitter:title" content="<?php echo $cms->getTitle() ?>"/>
-    <?php if ($cms->getMetaDescription()) ?><meta name="twitter:description" content="<?php echo trim(
-        strip_tags($cms->getMetaDescription())
-    ); ?>"/>
+	<?php if ($block->getHelper()->getSocialShares('opengraph')): ?>
+		<!--Open Graph Protocol for Facebook by Mageplaza SEO-->
+		<meta property="og:title" content="<?php echo $cms->getTitle() ?>"/>
+		<meta property="og:type" content="article"/>
+		<meta property="og:url" content="<?php echo $block->getCurrentUrl(); ?>"/>
+		<?php if ($cms->getMetaDescription()) ?><meta property="og:description" content="<?php echo strip_tags(
+			$cms->getMetaDescription()
+		) ?>"/>
+		<meta property="og:site_name" content="<?php echo $block->getBusinessName(); ?>"/>
+	<?php endif; ?>
+
+	<?php if ($block->getHelper()->getSocialShares('twitter_card') && $block->getHelper()->getSocialShares('twitter_account')): ?>
+		<!--	Twitter Card By Mageplaza SEO-->
+		<meta name="twitter:card" content="summary"/>
+		<meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
+		<meta name="twitter:title" content="<?php echo $cms->getTitle() ?>"/>
+		<?php if ($cms->getMetaDescription()) ?><meta name="twitter:description" content="<?php echo trim(
+			strip_tags($cms->getMetaDescription())
+		); ?>"/>
+	<?php endif; ?>
+
+	<?php if ($pinterest = $block->getHelper()->getSocialShares('pinterest')): ?>
+		<meta name="p:domain_verify" content="<?php echo $pinterest; ?>"/>
+	<?php endif; ?>
+
+	<?php if ($googlePlus = $block->getHelper()->getSocialShares('google_plus')): ?>
+		<link rel="publisher" href="<?php echo $googlePlus; ?>" />
+	<?php endif; ?>
+
 <?php endif; ?>
 
