--- a/view/frontend/templates/richsnippets/jsonld/organization.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/organization.phtml
@@ -1,23 +1,43 @@
 <!-- Customizing Knowledge Graph by Mageplaza SEO-->
 <!--Social Profiles, Business information -->
-<?php if ($block->getRichsnippetsHelper('custom') && $block->getRichsnippetsHelper('enable')): ?>
+<?php echo $block->getProfiles(); ?>
+<?php if ($block->getHelper()->getInfoConfig('enable')): ?>
     <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
   "@type" : "Organization",
   "name" : "<?php echo $block->getBusinessName(); ?>",
   "url" : "<?php echo $block->getBaseUrl(); ?>",
-  "logo": "<?php echo $block->getLogo(); ?>",
+  "logo": "<?php echo $block->getLogo(); ?>"
   <?php if ($block->getProfiles()): ?>
-  "sameAs" : [
+  ,"sameAs" : [
     <?php echo $block->getProfiles(); ?>
-  ],
+  ]
   <?php endif; ?>
-  "contactPoint" : [{
+  <?php if($block->getBusinessPhone()): ?>
+  ,"contactPoint" : [{
     "@type" : "ContactPoint",
     "telephone" : "<?php echo $block->getBusinessPhone(); ?>",
-    "contactType" : "Customer service"
+    "contactType" : "customer service"
   }]
+  <?php endif; ?>
+  <?php if($block->getBusinessSalesPhone()): ?>
+  ,"contactPoint" : [{
+    "@type" : "ContactPoint",
+    "telephone" : "<?php echo $block->getBusinessSalesPhone(); ?>",
+    "contactType" : "sales"
+  }]
+  <?php endif; ?>
+  <?php if($block->getBusinessSupportPhone()): ?>
+  ,"contactPoint" : [{
+    "@type" : "ContactPoint",
+    "telephone" : "<?php echo $block->getBusinessSupportPhone(); ?>",
+    "contactType" : "technical support"
+  }]
+  <?php endif; ?>
+
+
+
 }
 
     </script>
