Open graph, twitter card

--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -2,7 +2,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <head>
+
+        <referenceBlock name="head.additional">
             <block class="Mageplaza\Seo\Block\Page\Head\Category" name="mageplaza_seo_open_graph"
                    template="Mageplaza_Seo::opengraph/category.phtml">
             </block>
@@ -10,6 +11,7 @@
             <block class="Mageplaza\Seo\Block\Navigation\Category" name="mageplaza_seo_next_prev"
                    template="Mageplaza_Seo::navigation/nextprev.phtml">
             </block>
-        </head>
+        </referenceBlock>
+
     </body>
 </page>
