--- a/view/frontend/layout/catalog_category_view_type_default.xml
+++ b/view/frontend/layout/catalog_category_view_type_default.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <head>
-        <block class="Mageplaza\Seo\Block\Page\Head\Category" name="mageplaza_seo_opengraph"
-               template="Mageplaza_Seo::opengraph/category.phtml">
-        </block>
-        <block class="Mageplaza\Seo\Block\Navigation\Category" name="mageplaza_seo_next_prev"
-               template="Mageplaza_Seo::navigation/nextprev.phtml">
-        </block>
 
-    </head>
+    <body>
+
+        <referenceBlock name="head.additional">
+            <block class="Mageplaza\Seo\Block\Page\Head\Category" name="mageplaza_seo_open_graph"
+                   template="Mageplaza_Seo::opengraph/category.phtml">
+            </block>
+
+            <block class="Mageplaza\Seo\Block\Navigation\Category" name="mageplaza_seo_next_prev"
+                   template="Mageplaza_Seo::navigation/nextprev.phtml">
+            </block>
+        </referenceBlock>
+
+    </body>
 </page>
