--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <head>
-        <block class="Mageplaza\Seo\Block\Page\Head\Product" name="mageplaza_seo_open_graph"
-               template="Mageplaza_Seo::opengraph/product.phtml">
-        </block>
-    </head>
     <body>
+
+        <referenceBlock name="opengraph.general" remove="true" />
+
+        <referenceBlock name="head.additional">
+            <block class="Mageplaza\Seo\Block\Page\Head\Product" name="mageplaza_seo_open_graph"
+                   template="Mageplaza_Seo::opengraph/product.phtml">
+                <block class="Magento\Directory\Block\Currency" name="opengraph.currency" as="meta.currency"
+                       template="Magento_Catalog::product/view/opengraph/currency.phtml"/>
+            </block>
+        </referenceBlock>
+
         <referenceContainer name="after.body.start" before="-">
             <block class="Mageplaza\Seo\Block\Richsnippets\Product" name="mageplaza_seo_richsnippets_product"
                    template="Mageplaza_Seo::richsnippets/jsonld/product.phtml">
