--- a/view/frontend/layout/cms_index_index.xml
+++ b/view/frontend/layout/cms_index_index.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <referenceBlock name="head.additional">
-        <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_open_graph"
-               template="Mageplaza_Seo::opengraph/homepage.phtml">
-        </block>
-    </referenceBlock>
+    <body>
+        <referenceBlock name="head.additional">
+            <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_open_graph_home"
+                   template="Mageplaza_Seo::opengraph/homepage.phtml">
+            </block>
+        </referenceBlock>
+    </body>
 </page>
