--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -20,19 +20,11 @@
             </block>
         </referenceContainer>
 
-        <!--<referenceBlock name="breadcrumbs">-->
-        <!--<action method="setTemplate">-->
-        <!--<argument name="template" xsi:type="string">Mageplaza_Seo::richsnippets/jsonld/breadcrumb_default.phtml-->
-        <!--</argument>-->
-        <!--</action>-->
-        <!--</referenceBlock>-->
-
-        <referenceContainer name="breadcrumbs">
-            <block class="Magento\Backend\Block\Widget\Breadcrumbs" name="mageplaza_seo_breadcrumbs"
+        <referenceContainer name="page.breadcrumbs">
+            <block class="Mageplaza\Seo\Block\Widget\Breadcrumbs" name="mageplaza_seo_breadcrumbs"
                    as="mageplaza.seo.breadcrumbs"
                    template="Mageplaza_Seo::richsnippets/jsonld/breadcrumb.phtml"/>
         </referenceContainer>
-
 
         <referenceBlock name="footer_links">
             <block class="Magento\Framework\View\Element\Html\Link\Current" name="mageplaza_seo_sitemap_footer"
