--- a/view/frontend/templates/opengraph/category.phtml
+++ b/view/frontend/templates/opengraph/category.phtml
@@ -1,23 +1,23 @@
 <?php if ($category = $block->getCurrentCategory()): ?>
 
 	<?php if ($block->getHelper()->getSocialShares('opengraph')): ?>
-		<!--Open Graph Protocol for Facebook by Mageplaza SEO-->
-		<meta property="og:title" content="<?php echo $category->getName() ?>"/>
+		<!--Open Graph Protocol  by Mageplaza SEO-->
 		<meta property="og:type" content="product.group"/>
-		<meta property="og:url" content="<?php echo $block->getCurrentUrl(); ?>"/>
+		<meta property="og:title" content="<?php echo $block->escapeHtml($category->getName()) ?>"/>
+		<meta property="og:url" content="<?php echo $block->escapeHtml($block->getCurrentUrl()); ?>"/>
 		<?php if ($category->getShortDescription()): ?>
-			<meta property="og:description" content="<?php echo trim(strip_tags($category->getDescription())) ?>"/>
+			<meta property="og:description" content="<?php echo $block->escapeHtml($category->getDescription()) ?>"/>
 		<?php endif; ?>
-		<meta property="og:site_name" content="<?php echo $block->getBusinessName(); ?>"/>
+		<meta property="og:site_name" content="<?php echo $block->escapeHtml($block->getBusinessName()); ?>"/>
 	<?php endif; ?>
 
 	<?php if ($block->getHelper()->getSocialShares('twitter_card') && $block->getHelper()->getSocialShares('twitter_account')): ?>
 		<!--	Twitter Card By Mageplaza SEO-->
 		<meta name="twitter:card" content="summary"/>
-		<meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
-		<meta name="twitter:title" content="<?php echo $category->getName() ?>"/>
+		<meta name="twitter:site" content="<?php echo $block->escapeHtml($block->getTwitterAccount()); ?>"/>
+		<meta name="twitter:title" content="<?php echo $block->escapeHtml($category->getName()) ?>"/>
 		<?php if ($category->getShortDescription()): ?>
-			<meta name="twitter:description" content="<?php echo trim(strip_tags($category->getDescription())); ?>"/>
+			<meta name="twitter:description" content="<?php echo $block->escapeHtml($category->getDescription()); ?>"/>
 		<?php endif; ?>
 	<?php endif; ?>
 
