--- a/view/frontend/templates/opengraph/homepage.phtml
+++ b/view/frontend/templates/opengraph/homepage.phtml
@@ -1,35 +1,27 @@
-<?php $cms = $block->getCurrentCms(); ?>
-<?php if ($cms): ?>
-
-	<?php if ($block->getHelper()->getSocialShares('opengraph')): ?>
-
-		<!--Open Graph Protocol for Facebook by Mageplaza SEO-->
-		<meta property="og:title" content="<?php echo $cms->getTitle() ?>"/>
-		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="<?php echo $block->getCurrentUrl(); ?>"/>
-		<?php if ($cms->getMetaDescription()) ?><meta property="og:description" content="<?php echo strip_tags(
-			$cms->getMetaDescription()
-		) ?>"/>
-		<meta property="og:site_name" content="<?php echo $block->getBusinessName(); ?>"/>
-	<?php endif; ?>
+<?php if ($block->getHelper()->getSocialShares('opengraph')): ?>
+	<!--Open Graph Protocol for Facebook by Mageplaza_SEO-->
+	<meta property="og:title" content="<?php echo $block->getStoreName() ?>"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="<?php echo $block->getStoreUrl(); ?>"/>
+	<meta property="og:description" content="<?php echo $block->getStoreDescription(); ?>"/>
+	<meta property="og:site_name" content="<?php echo $block->getBusinessName(); ?>"/>
+<?php endif; ?>
 
 
-	<?php if ($block->getHelper()->getSocialShares('twitter_card') && $block->getHelper()->getSocialShares('twitter_account')): ?>
-		<!--	Twitter Card By Mageplaza SEO-->
-		<meta name="twitter:card" content="summary"/>
-		<meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
-		<meta name="twitter:title" content="<?php echo $cms->getTitle() ?>"/>
-		<?php if ($cms->getMetaDescription()) ?><meta name="twitter:description" content="<?php echo trim(
-			strip_tags($cms->getMetaDescription())
-		); ?>"/>
-	<?php endif; ?>
+<?php if ($block->getHelper()->getSocialShares('twitter_card') && $block->getHelper()->getSocialShares('twitter_account')): ?>
+<!--	Twitter Card By Mageplaza_SEO-->
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:site" content="<?php echo $block->getTwitterAccount(); ?>"/>
+	<meta name="twitter:title" content="<?php echo $block->getStoreName() ?>"/>
+	<meta name="twitter:description" content="<?php echo $block->getStoreDescription(); ?>"/>
+<?php endif; ?>
 
-	<?php if ($pinterest = $block->getHelper()->getSocialShares('pinterest')): ?>
-		<meta name="p:domain_verify" content="<?php echo $pinterest; ?>"/>
-	<?php endif; ?>
+<?php if ($pinterest = $block->getHelper()->getSocialShares('pinterest')): ?>
+<!--	Pinterest-->
+	<meta name="p:domain_verify" content="<?php echo $pinterest; ?>"/>
+<?php endif; ?>
 
-	<?php if ($googlePlus = $block->getHelper()->getSocialShares('google_plus')): ?>
-		<link rel="publisher" href="<?php echo $googlePlus; ?>" />
-	<?php endif; ?>
-
+<?php if ($googlePlus = $block->getHelper()->getSocialShares('google_plus')): ?>
+<!--	Google Plus Publisher-->
+	<link rel="publisher" href="<?php echo $googlePlus; ?>"/>
 <?php endif; ?>
