--- a/view/frontend/layout/seo_sitemap_index.xml
+++ b/view/frontend/layout/seo_sitemap_index.xml
@@ -14,6 +14,8 @@
                    template="Mageplaza_Seo::sitemap/product.phtml"/>
             <block class="Mageplaza\Seo\Block\Sitemap" name="mageplaza_seo_sitemap_page"
                    template="Mageplaza_Seo::sitemap/page.phtml"/>
+            <block class="Mageplaza\Seo\Block\Sitemap" name="mageplaza_seo_sitemap_link"
+                   template="Mageplaza_Seo::sitemap/link.phtml"/>
         </block>
 
     </referenceBlock>
