Fix error duplicate website data

--- a/view/frontend/templates/richsnippets/jsonld/sitename.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/sitename.phtml
@@ -1,3 +1,6 @@
+<?php
+/** @var \Mageplaza\Seo\Block\Richsnippets\Sitename $block */
+?>
 <!--Include Your Site Name in Search Results by Mageplaza SEO-->
 <?php if ($block->getRichsnippetsHelper('name_in_sr') && $block->getRichsnippetsHelper('enable')): ?>
 
